--- a/app/views/ranks/index.html.erb
+++ b/app/views/ranks/index.html.erb
@@ -12,7 +12,7 @@
       <p class="col-md-3"><%= counter %></td>
         <p class="col-md-3"><%= rank.user.email %></td>
       <p class="col-md-3"><%= rank.score %></td>
-      <p class="col-md-3">ran.user.games_played</td>
+      <p class="col-md-3"><%=rank.user.games_played%></td>
 
     </div>
     <% counter += 1 %>
